# pirogue-admin-web

./: .gitignore  README.md  index.html  package.json  pyproject.toml  requirements.txt  vite.config.js
debian/: changelog  control  copyright  pirogue-admin-web.install  pirogue-admin-web.postinst  pirogue-admin-web.service  rules
external-exposure-conf.d/: pirogue-admin-web.conf
frontend/: App.vue  main.js
frontend/assets/: styles.css
frontend/sections/: Logout.vue
pirogue_admin_web/: __init__.py  server.py
